--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -1,16 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'course/base.html' %}
+
+{% block title %}
+List course
+{% endblock %}
 
 {% block body %}
 <ol class="list-courses">
   {% for course in courses %}
-    <a href="{% url 'course:detail' course.id %}">
+    <a href="{% url 'course:course_detail' course.id %}">
       <li>
         {% if course.course_image != '' %}
-          <img src="{{ course.course_image.url }}" alt="image">
+          <img src="{{ course.image.url }}" alt="image">
         {% endif %}
         <div class="content">
-          <h1>{{ course.course_name }}</h1>
-          <p>{{ course.course_description }}</p>
+          <h1>{{ course.name }}</h1>
+          <p>{{ course.description }}</p>
         </div>
       </li>
     </a>
