--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="{% static 'style.css' %}?v=1.1">
+  <link rel="stylesheet" href="{% static 'root.css' %}?v=1.1">
   {% block css %}{% endblock %}
 
   <title>
@@ -17,58 +17,7 @@
   </title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg shadow">
-    <div class="container-fluid">
-      <div class="d-flex">
-        <a class="navbar-brand" href="{% url 'index' %}">Learning</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'course:course_index' %}">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'user:user_index' %}">Users</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="dropdown">
-        <a class="bg-user-icon" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-          <img class="user-icon" src="/media/avatars/default_user.png" alt="user-icon">
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          {% if user.is_authenticated %}
-            <li>
-              <form method="post" action="{% url 'logout' %}">
-                {% csrf_token %}
-                <button class="dropdown-item" type="submit">Logout</button>
-              </form>
-            </li>
-            <li><a href="{% url 'profile' %}" class="dropdown-item">Profile</a></li>
-          {% else %}
-            <li><a class="dropdown-item" href="{% url 'register' %}">Register</a></li>
-            <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{message.tags}} alert-dismissible" role="alert">
-        {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-
-  <div class="container py-3">
-    {% block body %}
-    {% endblock %}
-  </div>
+  {% block content %}
+  {% endblock %}
 </body>
 </html>
