--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,5 +1,31 @@
-<form method="POST">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Login</button>
-</form>
+{% extends 'base_with_navbar.html' %}
+{% load static %}
+
+{% block title %}
+Login
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'form_style.css' %}?v=1.1">
+{% endblock %}
+
+{% block body %}
+<div class="card">
+  <form method="POST">
+    <h1>Login</h1>
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="input-group">
+      {{ field.label_tag }}
+      {{ field }}
+      {% if field.errors %}
+        {{ field.errors }}
+      {% endif %}
+    </div>
+    {% endfor %}
+    <div class="form-buttons">
+      <button class="btn btn-primary" type="submit">Login</button>
+    </div>
+  </form>
+</div>
+{% endblock %}
