--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -1,7 +1,12 @@
-{% extends 'course/base.html' %}
+{% extends 'base_with_navbar.html' %}
+{% load static %}
 
 {% block title %}
 List course
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'course/course_list_style.css' %}?v=1.1">
 {% endblock %}
 
 {% block body %}
