--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -6,7 +6,7 @@ Register
 {% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'form_style.css' %}?v=1.1">
+<link rel="stylesheet" href="{% static 'user/user_form_style.css' %}?v=1.1">
 {% endblock %}
 
 {% block body %}
