--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,1 +1,15 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'user/user_form_style.css' %}?v=1.1">
+{% endblock %}
+
+{% block body %}
+<img src="{{ user.avatar.url }}" alt="avatar">
 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+{% endblock %}
