--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="{% static 'root.css' %}?v=1.1">
+  <link rel="stylesheet" href="{% static 'style.css' %}?v=1.1">
   {% block css %}{% endblock %}
 
-  <title>
-    {% block title %}
-    {% endblock %}
-  </title>
+  <title>Chatbot</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg shadow">
@@ -27,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Page</a>
+              <a class="nav-link" href="#">Chat</a>
             </li>
           </ul>
         </div>
@@ -36,7 +34,7 @@
         {% if user.is_authenticated %}
         <div class="dropdown">
           <a class="bg-user-icon" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-            <img class="user-icon" src="/media/avatars/default_user.png" alt="user-icon">
+            <img class="user-icon" src="{{ user.avatar.url }}" alt="user-icon">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li>
